# cpp-ml-library

./: .gitignore  CMakeLists.txt  README.md  vector_example
examples/: activation_example.cpp  matrix_example.cpp  vector_example.cpp
include/: matrix.hpp  vector.hpp
include/ml/linalg/: matrix.hpp  vector.hpp
include/ml/nn/: activations.hpp
src/: matrix.cpp  vector.cpp
src/linalg/: matrix.cpp  vector.cpp
src/nn/: activations.cpp
